# DynamicLibTesting

./: CMakeLists.txt  README.md
App/: CMakeLists.txt
App/include/: PluginManager.h  global.h
App/include/plugins/: PluginInterface.h  PluginLoader.h  PluginManager.h
App/src/: PluginLoader.cpp  PluginManager.cpp  app.cpp  global.cpp
lib1/: CMakeLists.txt
lib2/: CMakeLists.txt
plugins/: CMakeLists.txt  lib1.cpp  lib2.cpp
plugins/interface/: PluginInterface.h
